# BRKXAR-2032-test-automation

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  test_plan.yaml
parameters/: 1_0_0_verify_iosxe_ospf_ipv4_neighbors_status.py_parameters.json  1_0_1_verify_iosxe_ospf_ipv4_neighbors_ip_addresses_parameters.json  1_0_2_verify_iosxe_ospf_ipv4_neighbors_priority_parameters.json  verify_iosxe_ospf_ipv4_neighbors_status_parameters.json
workspace/: __init__.py  runner.py
workspace/jobfiles/: __init__.py  verify_iosxe_ospf_ipv4_neighbors_ip_addresses.py  verify_iosxe_ospf_ipv4_neighbors_priority.py  verify_iosxe_ospf_ipv4_neighbors_status.py
workspace/resources/: testbed.yaml
workspace/templates/summary/: report.html.j2
workspace/templates/test_case/: report.html.j2
workspace/utils/: __init__.py  adapters.py  cli.py  connectivity.py  constants.py  context.py  parameters.py  reports.py  results.py  runner.py  templates.py  types.py
workspace/utils/adapters/: __init__.py  device.py  testbed.py
